--- a/package.json
+++ b/package.json
@@ -3,28 +3,59 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/coreui": "^2.0.6",
+    "@coreui/icons": "^0.3.0",
+    "@fortawesome/fontawesome-free": "^5.3.1",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^1.5.1",
     "@material-ui/icons": "^2.0.3",
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
     "bootstrap-drawer": "^1.0.6",
+    "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
+    "nuka-carousel": "^4.4.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.5.2",
+    "react-alert": "^4.0.4",
+    "react-alert-template-basic": "^1.0.0",
+    "react-bootstrap": "^0.32.4",
+    "react-checkbox-group": "^4.0.1",
+    "react-confirm-alert": "^2.0.6",
+    "react-dates": "^18.1.0",
+    "react-dom": "^16.5.2",
     "react-drawer": "^1.3.4",
+    "react-images-upload": "^1.2.3",
+    "react-images-uploader": "^1.2.0-rc1",
+    "react-leaf-carousel": "^1.2.1",
     "react-modal": "^3.5.1",
+    "react-moment": "^0.7.9",
     "react-motion-drawer": "^3.1.0",
+    "react-number-format": "^3.6.2",
+    "react-progress-button": "^5.1.0",
     "react-responsive": "^5.0.0",
+    "react-responsive-carousel": "^3.1.42",
     "react-responsive-modal": "^3.2.0",
     "react-router": "^2.5.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-validation": "^3.0.7"
+    "react-select-popover": "^0.1.1",
+    "react-time": "^4.3.0",
+    "react-validation": "^3.0.7",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "rollup-plugin-buble": "^0.19.2",
+    "rollup-plugin-uglify": "^6.0.0"
   }
 }
